--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@page
 @model IndexModel
+@using WebApplication1.Pages.Models
 @{
     ViewData["Title"] = "Home page";
+    var helloModel = new HelloModel("Developer");
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <partial name="_Hello" model="helloModel" />
 </div>
