--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model IndexModel
-@using WebApplication1.Pages.Models
+@using WebApplication1.Models
 @{
     ViewData["Title"] = "Home page";
     var helloModel = new HelloModel("Developer");
