--- a/WebApplication1/Pages/_Hello.cshtml
+++ b/WebApplication1/Pages/_Hello.cshtml
@@ -1,3 +1,3 @@
-﻿@model WebApplication1.Pages.Models.HelloModel
+﻿@model WebApplication1.Models.HelloModel
 
 <div class="alert alert-success">Welcom to our Partial View @SayHi(Model.Name)</div>
