Refactoring to sructure and extend Microsoft.AspNetCore.Mvc.Razor.RazorPage<TModel>

--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -11,4 +11,5 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 
     <partial name="_Hello" model="helloModel" />
+    <partial name="/Views/Partials/_HelloMvc.cshtml" model="helloModel" />
 </div>
