--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@inherits Microsoft.AspNetCore.Mvc.Razor.RazorPage<TModel>
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
